# anoma-pay-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  mix.exs
assets/css/: app.css
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: anoma_pay.ex  anoma_pay_web.ex
lib/anoma_pay/: application.ex  base64_type.ex  nif.ex  release.ex  repo.ex
lib/anoma_pay_web/: api_spec.ex  endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/anoma_pay_web/components/: core_components.ex  layouts.ex
lib/anoma_pay_web/components/layouts/: root.html.heex
lib/anoma_pay_web/controllers/: changeset_json.ex  error_html.ex  error_json.ex  fallback_controller.ex
lib/anoma_pay_web/controllers/api/: api_controller.ex  api_json.ex
lib/anoma_pay_web/controllers/page_controller/: page_controller.ex  page_html.ex
lib/anoma_pay_web/schemas/: commitment.ex  create.ex  merkle_path.ex  merkle_path_node.ex  nullifier.ex  resource.ex  signature.ex  transaction.ex
native/anomapay_nif/: Cargo.toml  README.md
native/anomapay_nif/src/: lib.rs
native/transfer_app/: Cargo.toml
native/transfer_app/src/: burn.rs  eth.rs  main.rs  mint.rs  resource.rs  transfer.rs
native/transfer_library/: Cargo.toml
native/transfer_library/src/: lib.rs  rustler_util.rs
native/transfer_witness/: Cargo.toml
native/transfer_witness/src/: lib.rs  rustler_util.rs
priv/repo/: seeds.exs
test/: test_helper.exs
test/anoma_pay_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
test/support/: conn_case.ex  data_case.ex
