[package]
name = "transfer_app"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
transfer_witness = { path = "../transfer_witness" }
transfer_library = { path = "../transfer_library", features = ["nif"]}
arm = { path = "/Users/christophe/RustroverProjects/arm-risc0/arm",   default-features = false, features = ["transaction", "bonsai", "groth16_prover"] }
rand = "0.8"
risc0-zkvm = { version = "3.0.3", default-features = false, features = ["std", "unstable"] }
lazy_static = "1.5.0"
hex = "0.4"
evm_protocol_adapter_bindings = { git = "https://github.com/anoma/evm-protocol-adapter", branch = "feature/sepolia-demo"}
tokio = "1.47.1"
alloy = { version = "1.0.23", features = ["full"] }
k256 = "0.13"
sha3 = "0.10"
dotenv = "0.15"